# CuriosityProjects

./: README.md
NetPlay/: .gitignore  CMakeLists.txt  LICENSE.md
NetPlay/src/: CMakeLists.txt  a.out  client  server  tcp_client.c  tcp_server.c  udp_client.c  udp_server.c
